# rustdef

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  pyproject.toml
.github/workflows/: main.yml  publish.yml  test.yml
examples/: Get started.ipynb  numpy.ipynb  simple.ipynb  types.ipynb
rustdef/: __init__.py  magic.py
src/: array.rs  core.rs  io.rs  lib.rs  numpy.rs
