[package]
name = "rustdef"
version = "0.3.1"
authors = ["Ryosuke Kamesawa <emak.ryo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustdef"
crate-type = ["cdylib", "rlib"]


[dependencies]
quote = "1.0.20"
zip = "0.5.13"
syn = { version = "1.0.86", features = ["full"] }
pyo3 = { version = "0.15.1", features = ["extension-module"] }  # version corresponds to numpy
