[build-system]
requires = ["maturin"]
build-backend = "maturin"

[package.metadata.maturin]
requires-dist = [
    "jupyter",
    "pip>=19.3"
]

# Poetry is used for development
[tool.poetry]
name = "rustdef"
version = "0.2.0"
description = ""
authors = ["Ryosuke Kamesawa <emak.ryo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pip = "^19.3"
jupyter = "^1.0.0"
maturin = "^0.8.3"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
